# hl7v2-parser

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
benchmarking/: burst_worker.py  connection_worker.py  coordinator.py  long_lived_worker.py  mllp_client.py  run_benchmark.py  visualize.py
config/: logging.yaml  routes.yaml  validation.yaml
deploy/: DeploymentMakefileTodo.txt
docs/: 01_ComponentDiagram.md  02_RoutingLogicDiagram.md  03_ValidationPipeline.md  architecture.md  developer_guide.md  important_cmds.txt  onboarding.md
hl7engine/: __init__.py  api.py  db.py  hl7_listener.py  hl7_messages.db  json_logger.py  metrics_reporter.py  mllp_server.py  prometheus_exporter.py  prometheus_http.py  router.py  validator.py
makefiles/: benchmarking.mk  grafana.mk  help.mk  hl7.mk  monitoring.mk  orchestration.mk  persistence.mk  prometheus.mk  rest.mk  testing.mk  ui.mk  utils.mk
monitoring/: README.md  alert_rules.yml  grafana_dashboard_hl7.json  prometheus.yml  recording_rules.yml
samples/: sample_adt_a01.hl7  sample_adt_a01_lisa.hl7  sample_adt_a01_markus.hl7  sample_adt_a01_v26.hl7  sample_adt_a03.hl7  sample_ae_missing_obx.hl7  sample_ar_missing_pid.hl7  sample_orm_o01.hl7  sample_orm_o01_v26.hl7  sample_oru.hl7  sample_oru_glucose.hl7  sample_oru_glucose_anna.hl7  sample_oru_hb.hl7  sample_oru_hb_peter.hl7  sample_oru_pcd01.hl7  sample_oru_r01_v26.hl7  sample_valid_oru.hl7  sample_vxu_v04_v26.hl7
scripts/: convert_profile.sh  fragmented-msg-test.sh  multiple-ORU-msgs.sh  multiple-msg-types.sh  streess-test-100msgs.sh
tests/: Readme.md  conftest.py  test_00_debug_path.py  test_01_parser.py  test_02_mllp.py  test_03_component_validation.py  test_04_routing.py  test_05_hl7_validator_full.py  test_06_mllp_integration_full.py  test_07_listener_router_integration.py  test_08_routing_stress_test.py  test_09_routing_yaml_schema_test.py  test_10_prometheus.py
tools/: build_oru_r01_profile.py  convert_profile.py  hl7_version_test.py  parse_hl7_with_external_lib.py  regenerate_seed_db.py  (+2 more)
(+39 files in other folders)
