[project]
name = "hl7engine"
version = "0.5.0"
description = "HL7 v2 MLLP listener, router, validator, and parser"
authors = [
    { name = "Matthias Viertler", email = "matthias.viertler@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hl7apy",
    "pydantic",
    "pyyaml",
    "requests",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hl7engine"]