[project]
name = "hl7engine"
dynamic = ["version"]
description = "HL7 v2 MLLP listener, router, validator, and parser"
authors = [
    { name = "Matthias Viertler", email = "matthias.viertler@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hl7apy",
    "pydantic",
    "pyyaml",
    "requests",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hl7engine"]

[tool.setuptools_scm]
write_to = "hl7engine/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
